Add readme info

--- a/views/pages/lampotilat.ejs
+++ b/views/pages/lampotilat.ejs
@@ -21,7 +21,7 @@
         <div class="row justify-content-center">
           <table class="table borderless">
             <tr class="bg-light">
-              <th>Aika</th>
+              <th>Mittausaika</th>
               <th>Paikka</th>
               <th>Veden lämpötila</th>
               <th>Ilman lämpötila</th>
