--- a/public/styles.css
+++ b/public/styles.css
@@ -1,12 +1,12 @@
 html {
     height: 100%;
-    overflow-x: hidden;  
+    
     font-family: 'Courier New', Courier, monospace; 
 }
 body {
     height: 100%;
     min-width: 320px;
-    overflow-x: hidden;  
+     
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -51,6 +51,7 @@ body {
 @media only screen and (max-width: 600px) {
     .navbar-brand {
         margin-left: 0px;
+        font-size: 20px;
     }
     .nav-link {
         margin-right: 0px;
