--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,8 +6,8 @@
 <body>
   <%- include('../partials/navigation')%>
   
-  <div id="page-container">
-    <div class="container">
+  <div id="page-container" class="container">
+    <div class="col-xs-10">
       <div class="row " id="infotext">
         <h2 id="kotisivunOtsikko">Sivuston tarkoitus</h2>
         <p>Tämä sivusto on laadittu osana tietojenkäsittelyn tradenomin opintojen FullStack kurssia.
@@ -23,7 +23,6 @@
         Helsingin kaupungin innovaatioyhtiö Forum Virium omistaa sensorit sekä API:n. Lisätietoja 
         https://hri.fi/data/fi/dataset/veden-reaaliaikainen-lampotila-helsingin-uimarannoilla
         </p>
-        
       </div>
     </div>
   </div>
