--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,8 +7,8 @@
   <%- include('../partials/navigation')%>
   
   <div id="page-container" class="container">
-    <div class="col-xs-10">
-      <div class="row " id="infotext">
+    <div class="row">
+      <div class="col-xs-12" id="infotext">
         <h2 id="kotisivunOtsikko">Sivuston tarkoitus</h2>
         <p>Tämä sivusto on laadittu osana tietojenkäsittelyn tradenomin opintojen FullStack kurssia.
         Tehtävässä oli tarkoitus harjoitella API kutsuja sekä 
