--- a/views/pages/lampotilat.ejs
+++ b/views/pages/lampotilat.ejs
@@ -28,8 +28,8 @@
     </div>
 
     <div class="container">
-      <div class="col-xs-12">
-        <div class="row table-responsive-sm justify-content-center">
+      <div class="row">
+        <div class="col-xs-12 table-responsive-sm justify-content-center">
           <table class="table">
             <tr class="bg-light">
               <th>Mittausaika</th>
